added show more button
Co-authored-by: yashshahir0111 <yashshahir0111@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -35,162 +35,179 @@
                     >
                 </h2>
             </div>
+            <div id="view-more">
+                <a onclick="showMore()">Show More</a>
+            </div>
         </div>
-        <h2 class="section-name">
-            <u>Academic Performance (High School to Highest Qualification)</u>
-        </h2>
-        <table style="width: 100%">
-            <tr>
-                <th>Exam</th>
-                <th>Passing Month and Year</th>
-                <th>Name & Address of College/School</th>
-                <th>Board</th>
-                <th>Percentage</th>
-                <th>Grade</th>
-            </tr>
-            <tr>
-                <td>S.S.C</td>
-                <td>March 2005</td>
-                <td>B.Y.Highschool, PethVadgaon, Kolhapur</td>
-                <td>Kolhapur Board</td>
-                <td>
-                    83.33% <br />
-                    <progress value="83.33" max="100.00">83.33%</progress>
-                </td>
-                <td>Distinction</td>
-            </tr>
-            <tr>
-                <td>H.S.C/Diploma</td>
-                <td>Feb 2007</td>
-                <td>B.Y.College, PethVadgaon, Kolhapur</td>
-                <td>Kolhapur Board</td>
-                <td>
-                    72.33% <br />
-                    <progress value="72.33" max="100.00">72.33%</progress>
-                </td>
-                <td>First Class</td>
-            </tr>
-            <tr>
-                <td>Degree</td>
-                <td>May 2011</td>
-                <td>
-                    Dr.J.J.Magdum College Of Engineering And Technology,
-                    Jaysingpur.
-                </td>
-                <td>Shivaji University</td>
-                <td>
-                    66.93% <br />
-                    <progress value="66.93" max="100.00">66.93%</progress>
-                </td>
-                <td>Distinction</td>
-            </tr>
-        </table>
-        <h2 class="section-name">
-            <u>Experience</u>
-        </h2>
-        <table style="width: 100%">
-            <tr>
-                <th colspan="2">Teaching (In Year(s))</th>
-                <th>Industial</th>
-                <th>Total</th>
-            </tr>
-            <tr>
-                <th>PCP</th>
-                <th>Other Institutes</th>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>3.5</td>
-                <td>-</td>
-                <td>6.5</td>
-            </tr>
-        </table>
+        <div id="sect">
+            <h2 class="section-name">
+                <u
+                    >Academic Performance (High School to Highest
+                    Qualification)</u
+                >
+            </h2>
+            <table style="width: 100%">
+                <tr>
+                    <th>Exam</th>
+                    <th>Passing Month and Year</th>
+                    <th>Name & Address of College/School</th>
+                    <th>Board</th>
+                    <th>Percentage</th>
+                    <th>Grade</th>
+                </tr>
+                <tr>
+                    <td>S.S.C</td>
+                    <td>March 2005</td>
+                    <td>B.Y.Highschool, PethVadgaon, Kolhapur</td>
+                    <td>Kolhapur Board</td>
+                    <td>
+                        83.33% <br />
+                        <progress value="83.33" max="100.00">83.33%</progress>
+                    </td>
+                    <td>Distinction</td>
+                </tr>
+                <tr>
+                    <td>H.S.C/Diploma</td>
+                    <td>Feb 2007</td>
+                    <td>B.Y.College, PethVadgaon, Kolhapur</td>
+                    <td>Kolhapur Board</td>
+                    <td>
+                        72.33% <br />
+                        <progress value="72.33" max="100.00">72.33%</progress>
+                    </td>
+                    <td>First Class</td>
+                </tr>
+                <tr>
+                    <td>Degree</td>
+                    <td>May 2011</td>
+                    <td>
+                        Dr.J.J.Magdum College Of Engineering And Technology,
+                        Jaysingpur.
+                    </td>
+                    <td>Shivaji University</td>
+                    <td>
+                        66.93% <br />
+                        <progress value="66.93" max="100.00">66.93%</progress>
+                    </td>
+                    <td>Distinction</td>
+                </tr>
+            </table>
 
-        <h2 class="section-name">
-            <u>Papers Published</u>
-        </h2>
-        <table style="width: 100%">
-            <tr>
-                <th>Paper Name</th>
-                <th>Publication Details</th>
-                <th>Date/Year of Paper Published</th>
-            </tr>
-            <tr>
-                <td>Digital Library Management System</td>
-                <td>IRJET, Volume 6, Issue 1, S.NO:350</td>
-                <td>January 2019</td>
-            </tr>
-            <tr>
-                <td>Event Management System</td>
-                <td>IRJET Volume 6, Issue 1, S.NO:331</td>
-                <td>January 2019</td>
-            </tr>
-            <tr>
-                <td>Real Time Flood Management System</td>
-                <td>IJIRT, Volume 6, Issue 7</td>
-                <td>December 2019</td>
-            </tr>
-            <tr>
-                <td>RTO Automation Using QR Code</td>
-                <td>IRJET Volume 6, Issue 7</td>
-                <td>December 2019</td>
-            </tr>
-            <tr>
-                <td>Fingure Print Based Folder Lock</td>
-                <td>IRJET Volume 6, Issue 12</td>
-                <td>December 2019</td>
-            </tr>
-            <tr>
-                <td>JARVIS:The Personal Assistant using Python</td>
-                <td>IJIRCCE ,Volume 10,Issue 3</td>
-                <td>March 2022</td>
-            </tr>
-            <tr>
-                <td>
-                    IOT heartattack detection and heart rate monitoring system
-                </td>
-                <td>IJIRCCE, Volume 10, Issue 2</td>
-                <td>February 2022</td>
-            </tr>
-            <tr>
-                <td>Sleep App - Improve Sleep and Meditation</td>
-                <td>IJIRCCE, Volume 11, Issue 3</td>
-                <td>March 2022</td>
-            </tr>
-            <tr>
-                <td>Pet shop Management System</td>
-                <td>IJIRCCE ,Vol. 11, Issue 3</td>
-                <td>March 2022</td>
-            </tr>
-            <tr>
-                <td>
-                    A Study on IoT Based Real Time Flood Alert System for Dam
-                </td>
-                <td>IJARSCT,Volume 2, Issue 7</td>
-                <td>June 2022</td>
-            </tr>
-            <tr>
-                <td>
-                    Survey on Various Image Compression Techniques Used in Image
-                    Processing to Improve the Quality of Image/td>
-                </td>
-                <td>IJARSCT, Volume 2, Issue 7</td>
-                <td>March 2022</td>
-            </tr>
-            <tr>
-                <td>Healthcare IoT (HIoT)</td>
-                <td>IJARSCT, Volume 2, Issue 7</td>
-                <td>March 2022</td>
-            </tr>
-            <tr>
-                <td>
-                    Design and Implementation of an Automatic Irrigation System
-                    based on Monitoring Soil Moisture and Agriculture Thief
-                    Detection
-                </td>
-                <td>IJARSCT, Volume 2, Issue 7</td>
-                <td>March 2022</td>
-            </tr>
-        </table>
+            <h2 class="section-name">
+                <u>Experience</u>
+            </h2>
+            <table style="width: 100%">
+                <tr>
+                    <th colspan="2">Teaching (In Year(s))</th>
+                    <th>Industial</th>
+                    <th>Total</th>
+                </tr>
+                <tr>
+                    <th>PCP</th>
+                    <th>Other Institutes</th>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>3.5</td>
+                    <td>-</td>
+                    <td>6.5</td>
+                </tr>
+            </table>
+
+            <h2 class="section-name">
+                <u>Papers Published</u>
+            </h2>
+            <table style="width: 100%">
+                <tr>
+                    <th>Paper Name</th>
+                    <th>Publication Details</th>
+                    <th>Date/Year of Paper Published</th>
+                </tr>
+                <tr>
+                    <td>Digital Library Management System</td>
+                    <td>IRJET, Volume 6, Issue 1, S.NO:350</td>
+                    <td>January 2019</td>
+                </tr>
+                <tr>
+                    <td>Event Management System</td>
+                    <td>IRJET Volume 6, Issue 1, S.NO:331</td>
+                    <td>January 2019</td>
+                </tr>
+                <tr>
+                    <td>Real Time Flood Management System</td>
+                    <td>IJIRT, Volume 6, Issue 7</td>
+                    <td>December 2019</td>
+                </tr>
+                <tr>
+                    <td>RTO Automation Using QR Code</td>
+                    <td>IRJET Volume 6, Issue 7</td>
+                    <td>December 2019</td>
+                </tr>
+                <tr>
+                    <td>Fingure Print Based Folder Lock</td>
+                    <td>IRJET Volume 6, Issue 12</td>
+                    <td>December 2019</td>
+                </tr>
+                <tr>
+                    <td>JARVIS:The Personal Assistant using Python</td>
+                    <td>IJIRCCE ,Volume 10,Issue 3</td>
+                    <td>March 2022</td>
+                </tr>
+                <tr>
+                    <td>
+                        IOT heartattack detection and heart rate monitoring
+                        system
+                    </td>
+                    <td>IJIRCCE, Volume 10, Issue 2</td>
+                    <td>February 2022</td>
+                </tr>
+                <tr>
+                    <td>Sleep App - Improve Sleep and Meditation</td>
+                    <td>IJIRCCE, Volume 11, Issue 3</td>
+                    <td>March 2022</td>
+                </tr>
+                <tr>
+                    <td>Pet shop Management System</td>
+                    <td>IJIRCCE ,Vol. 11, Issue 3</td>
+                    <td>March 2022</td>
+                </tr>
+                <tr>
+                    <td>
+                        A Study on IoT Based Real Time Flood Alert System for
+                        Dam
+                    </td>
+                    <td>IJARSCT,Volume 2, Issue 7</td>
+                    <td>June 2022</td>
+                </tr>
+                <tr>
+                    <td>
+                        Survey on Various Image Compression Techniques Used in
+                        Image Processing to Improve the Quality of Image/td>
+                    </td>
+                    <td>IJARSCT, Volume 2, Issue 7</td>
+                    <td>March 2022</td>
+                </tr>
+                <tr>
+                    <td>Healthcare IoT (HIoT)</td>
+                    <td>IJARSCT, Volume 2, Issue 7</td>
+                    <td>March 2022</td>
+                </tr>
+                <tr>
+                    <td>
+                        Design and Implementation of an Automatic Irrigation
+                        System based on Monitoring Soil Moisture and Agriculture
+                        Thief Detection
+                    </td>
+                    <td>IJARSCT, Volume 2, Issue 7</td>
+                    <td>March 2022</td>
+                </tr>
+            </table>
+        </div>
+        <script>
+            function showMore() {
+                var section = document.getElementsById("sect");
+                section.style.display = "block";
+            }
+        </script>
     </body>
 </html>
