--- a/index.html
+++ b/index.html
@@ -192,5 +192,179 @@
                 <td>March 2022</td>
             </tr>
         </table>
+        <h2 class="section-name">
+            <u>Number of Blogs Posts</u>
+        </h2>
+        <table style="width: 100%">
+            <tr>
+                <th>Sr. no</th>
+                <th>Blog Name</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Engineers Day</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Web Page Designing</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Spoken Tutorial</td>
+            </tr>
+        </table>
+        <h2 class="section-name">
+            <u>Conference/Seminar/Workshop/STTP/FDP Attended</u>
+        </h2>
+        <table style="width: 100%">
+            <tr>
+                <th>Sr. no</th>
+                <th>Name</th>
+                <th>Duration</th>
+                <th>Venue</th>
+            </tr>
+            <tr>
+                <th colspan="4">FDP</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>FDP on “Advance Computer Network</td>
+                <td>16<sup>th</sup> to 20<sup>th</sup> December 2019</td>
+                <td>Pimpri Chinchwad Polytechnic,Pune.</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>FDP on "PHP and MySQL</td>
+                <td>24<sup>th</sup> 2020 to 30<sup>th</sup> April 2020</td>
+                <td>
+                    Online, smt. Kashibai Navale College Of Engineering,Pune.
+                </td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>FDP on Python</td>
+                <td>11<sup>th</sup> May 2020 to 15<sup>th</sup> May 2020</td>
+                <td>SVCP, Pune</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>FDP on C & CPP</td>
+                <td>16<sup>th</sup> May to 20<sup>th</sup> May 2020</td>
+                <td>Shri Siddheshwar Women's Polytechnic, Solapur.</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>FDP on Java</td>
+                <td>17<sup>th</sup> May 2020 to 22<sup>nd</sup> May 2020</td>
+                <td>AISSMS, Pune</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>FDP on HTML</td>
+                <td>25<sup>th</sup> May to 30<sup>th</sup> May 2020</td>
+                <td>Pimpri Chinchwad Polytechnic, Pune.</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>FDP on Linux</td>
+                <td>21<sup>st</sup> May to 25<sup>th</sup> May 2020</td>
+                <td>Pimpri Chinchwad Polytechnic, Pune.</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>FDP on Java Business Application</td>
+                <td>Jan 2020 to March 2020</td>
+                <td>Spoken Tutorial, PCP, Pune</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>FDP on Java</td>
+                <td>June 2019 to Oct 2019</td>
+                <td>Spoken Tutorial, PCP, Pune</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>
+                    A National Level Webinar On ”Emerging Trends And Career
+                    Opportunities in Information Technology”
+                </td>
+                <td>6<sup>th</sup> June 2020</td>
+                <td>AISSMS, Pune</td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>Workshop On Android App Development</td>
+                <td>
+                    30<sup>th</sup> December 2019 to 1<sup>th</sup> January 2020
+                </td>
+                <td>IF Department, PCP, Pune</td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Training on 'Client Side Scripting'</td>
+                <td>1<sup>st</sup> to 2<sup>nd</sup> August 2019</td>
+                <td>IF Department, PCP, Pune</td>
+            </tr>
+            <tr>
+                <td>13</td>
+                <td>Training on Applied Multimedia Techniques</td>
+                <td>8<sup>th</sup> to 9<sup>th</sup> August 2019</td>
+                <td>IF Department, PCP, Pune</td>
+            </tr>
+        </table>
+
+        <h2 class="section-name">
+            <u>Extra Co-curricular Activities</u>
+        </h2>
+        <table style="width: 100%">
+            <tr>
+                <th>Sr. no</th>
+                <th>Activity Name</th>
+                <th>Activity Detail</th>
+                <th>Duration</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Sports Co-Ordinator</td>
+                <td>Bsiet Polytechnic College, Kolhapur</td>
+                <td>1 Year</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Technical Event Coordinator</td>
+                <td>Computer Department, PCP, Akurdi</td>
+                <td>1 Year</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Class Teacher SYCO</td>
+                <td>Computer Department, PCP, Akurdi</td>
+                <td>6 Months</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Class Teacher TYIF</td>
+                <td>Information Technology Department, PCP, Akurdi</td>
+                <td>6 Months</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Project Coordinator</td>
+                <td>Information Technology Department, PCP, Akurdi</td>
+                <td>6 Months</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>ISTE Coordinator</td>
+                <td>Computer Department, PCP, Akurdi</td>
+                <td>6 Months</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Website In charge</td>
+                <td>PCP, Akurdi</td>
+                <td>1 Year</td>
+            </tr>
+        </table>
     </body>
 </html>
