--- a/index.html
+++ b/index.html
@@ -213,17 +213,65 @@
                 </tr>
             </table>
         </div>
-        <script>
-            function showMore() {
-                document.getElementById("sect").style.display = "block";
-                document.getElementById("view-more").style.display = "none";
-                document.getElementById("view-less").style.display = "block";
-            }
-            function showLess() {
-                document.getElementById("sect").style.display = "none";
-                document.getElementById("view-more").style.display = "block";
-                document.getElementById("view-less").style.display = "none";
-            }
-        </script>
+        <div id="containerCat">
+            <img
+                class="image"
+                src="images/1_week_fac.jpeg"
+                alt="1 Week Faculty Training"
+            />
+            <img
+                class="image"
+                src="images/amt.jpeg"
+                alt="Applied Multimedia Techniques completion"
+            />
+            <img
+                class="image"
+                src="images/ijarcce_pet.jpeg"
+                alt="Pet Shop Management System"
+            />
+
+            <img
+                class="image"
+                src="images/ijarcce_sleep.jpeg"
+                alt="sleep app "
+            />
+            <img
+                class="image"
+                src="/images/ijircce_iot_heart.jpeg"
+                alt="iot based heart detection"
+            />
+            <img
+                class="image"
+                src="/images/ijircce_jarvis.jpeg"
+                alt="jarvis personal asistant"
+            />
+            <img
+                class="image"
+                src="/images/ijirt_flood.jpeg"
+                alt="flood alert system "
+            />
+            <img
+                class="image"
+                src="/images/ijirt_rto.jpeg"
+                alt="rto automation using qr code "
+            />
+            <img
+                class="image"
+                src="/images/irjet_dl_management.jpeg"
+                alt="digital library Management "
+            />
+            <img
+                class="image"
+                src="/images/irjet_evnt_management.jpeg"
+                alt="event Management "
+            />
+            <img
+                class="image"
+                src="/images/irjet_fp_folder_lock.jpeg"
+                alt="fingureprint folder lock "
+            />
+        </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
