--- a/contact.html
+++ b/contact.html
@@ -94,13 +94,9 @@
         <div class="p-3">
             <h2 class="section-name text-center"><u>Contact me</u></h2>
             <br />
-            <button
-                class="btn btn-secondary w-100 mt-3 mb-2"
-                href="mailto:supriyavpatil.5@gmail.com"
-            >
-                Email
-            </button>
-            <button class="btn btn-secondary w-100 mt-2">Phone</button>
+            <button class="btn btn-secondary w-100 mt-3 mb-2">Email</button>
+            <button class="btn btn-secondary w-100 mt-2 mb-2">Phone</button>
+            <button class="btn btn-secondary w-100 mt-2">Instagram</button>
         </div>
         <script src="script.js"></script>
         <script
